<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".PaymentActivity"
    android:padding="@dimen/medium_padding_margin">

    <Button
        android:text="@string/back_button"
        style="@style/back_button"
        android:onClick="onBackClick"
        >
    </Button>

    <EditText
        android:id="@+id/fullName"
        style="@style/input_text"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/address"
        style="@style/input_text"
        android:hint="@string/address"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/cardNumber"
        style="@style/input_text"
        android:hint="@string/cardNumber"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/cardCVV"
            style="@style/small_input_text"
            android:hint="@string/cardCVV"
            android:inputType="number" />

    </LinearLayout>


    <EditText
        android:id="@+id/phoneNumber"
        style="@style/input_text"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/emailAddress"
        style="@style/input_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/empty_space_height" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comments"
        android:inputType="textShortMessage" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/empty_space_height" />

    <TextView
        android:id="@+id/questionsTitle"
        style="@style/title"
        android:text="@string/questions_title" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text"
        android:layout_marginStart="@dimen/small_padding_margin"
        android:text="@string/question1" />

    <EditText
        android:id="@+id/question1Answer"
        style="@style/input_text"
        android:inputType="text" />

    <TextView
        android:id="@+id/question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text"
        android:layout_marginStart="@dimen/small_padding_margin"
        android:text="@string/question2" />

    <EditText
        android:id="@+id/questions2Answer"
        style="@style/input_text"
        android:inputType="text" />

    <Button
        style="@style/main_button"
        android:text="@string/next_button"
        android:onClick="onNextClick"
        >
    </Button>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            style="@style/copyright_text"
            android:text="@string/icon_copyright"/>
    </RelativeLayout>

</LinearLayout>
</ScrollView>