<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".CheckoutActivity">

    <Button
        android:text="@string/back_button"
        style="@style/back_button"
        android:onClick="onBackClick"
        >
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding_margin"
        android:textSize="@dimen/big_text"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:text="@string/checkout"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/bigger_padding_margin">

        <TextView
            android:id="@+id/checkout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/medium_text"
            android:layout_marginHorizontal="@dimen/medium_padding_margin"
            android:layout_marginVertical="@dimen/bigger_padding_margin" />

        <TextView
            android:id="@+id/totalSum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/medium_padding_margin"
            android:layout_marginVertical="@dimen/bigger_padding_margin"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            android:textColor="@color/grey"
            android:text="@string/total"
            />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:backgroundTint="@color/asparagus"
        android:background="?android:attr/listDivider" />


    <RadioGroup android:id="@+id/paymentMethods"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/medium_padding_margin">

        <RadioButton android:id="@+id/cash"
            style="@style/radio_button"
            android:text="@string/cash" />
        <RadioButton android:id="@+id/creditCard"
            style="@style/radio_button"
            android:text="@string/credit_card" />
        <RadioButton android:id="@+id/debitCard"
            style="@style/radio_button"
            android:text="@string/debit_card" />
    </RadioGroup>

    <Button
        style="@style/secondary_button"
        android:text="@string/next_button"
        android:onClick="onNextClick"
        >

    </Button>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            style="@style/copyright_text"
            android:text="@string/icon_copyright"/>
    </RelativeLayout>

</LinearLayout>

</ScrollView>