<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".FoodCategoryActivity">
    
    <Button
        android:text="@string/back_button"
        style="@style/back_button"
        android:onClick="onBackClick"
        >
    </Button>

    <ImageView
        style="@style/image"
        android:src="@drawable/shopping_cart"
        android:contentDescription="@string/empty_cart_image_description"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_text"
        android:textSize="@dimen/large_text"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/bigger_padding_margin"
        android:layout_marginHorizontal="@dimen/small_padding_margin"
        android:padding="@dimen/medium_padding_margin"
        android:gravity="center_horizontal"
        android:textColor="@color/grey"
        />

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            style="@style/copyright_text"
            android:text="@string/icon_copyright"/>
    </RelativeLayout>

</LinearLayout>
</ScrollView>