<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left">
        <Button
            android:text="@string/back_button"
            style="@style/back_button"
            android:onClick="onBackClick"
            >
        </Button>
        </RelativeLayout>

        <ImageView
            android:id="@+id/categoryLogo"
            android:src="@drawable/app_logo"
            style="@style/image"
            android:contentDescription="@string/items_image_description"
            />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/itemsLayout"
            android:layout_margin="@dimen/medium_padding_margin"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingHorizontal="@dimen/table_left_padding"
            >

        </TableLayout>

        <Button
            style="@style/secondary_button"
            android:drawableStart="@drawable/checkout_icon"
            android:onClick="onCheckoutClick"
            android:text="@string/checkout_button"
            >
        </Button>

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                style="@style/copyright_text"
                android:text="@string/icon_copyright"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>